fixed website pics on mobile

--- a/src/css/Aboutpage.css
+++ b/src/css/Aboutpage.css
@@ -130,7 +130,7 @@
   transition: all 0.35s cubic-bezier(0.165, 0.84, 0.44, 1);
   transform: translate(-50%, -50%);
   left: 50%;
-  top: 50%;
+  top: 90%;
   height: 50%;
   width: 100%;
 }
